# gxza-hack

./: .gitignore  README.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/inventoryapp/: FormEntryUiState.kt  FormEntryView.kt  FormEntryViewModel.kt  MainActivity.kt
android/app/src/main/java/com/example/inventoryapp/network/: InventoryApi.kt  RequestBody.kt  RetrofitBuilder.kt
android/app/src/main/java/com/example/inventoryapp/ui/theme/: Theme.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
api/: README.md  main.py  mise.toml  pyproject.toml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/inventoryapp/: FormEntryView.kt  FormEntryViewModel.kt
client/: cors.json  index.html  package-lock.json  package.json
client/src/: App.jsx  main.jsx
client/src/components/: FileUpload.jsx  Header.jsx  InventoryList.jsx
client/src/firebase/: config.js
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
python-api/: README.md  app.py  config.py  fly.toml  main.py  mise.toml  pyproject.toml
